# pynative_mobile

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  web_preview.html
.github/workflows/: python-package.yml
docs/: index.md
pynative_mobile/: __init__.py  ai.py  assets.py  base.py  cli.py  engine.py  hardware.py  layouts.py  network.py  state.py  storage.py  theme.py  transport.py  widgets.py
shell_example/: README.md  react_native_shell.md
shell_example/flutter_shell/: README.md
tests/: test_cli.py  test_core.py
